codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_actions_popup.snap
---
source: tui/src/chatwidget/tests/accounts.rs
assertion_line: 201
expression: popup
---
  Account
  API key (...2222)

     Switch to API key (...2222) (disabled)  Make this the active account
                                             (disabled: Already active)
› 1. Remove API key (...2222)                Delete this saved login from /
                                             accounts
  2. Back                                    Return to the accounts list

  Press enter to confirm or esc to go back
