codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__accounts_popup_failed_status.snap
---
source: tui/src/chatwidget/tests/accounts.rs
expression: popup
---
  Accounts
  Switch the active account, remove a saved login, or add another account

› 1. API key (...1111) (current)  Currently active account · API key · failed to load
                                  limits: network unavailable
  2. Add account                  Sign in with another account in your browser

  Press enter to confirm or esc to go back
